# ROSControllerLearningCase

./: .gitignore  README.md
1-HardwareInterface/: README.txt
2-ROS2Controller/: README.txt
2-ROS2Controller/src-start_plane_project_without_custom_controller/my_robot_description/urdf/: arm.ros2_control.xacro
3-ControllerExamples/Exp_6Dof/: CMakeLists.txt  README.md
3-ControllerExamples/Exp_6Dof/bringup/config/: r6bot_controller.yaml
3-ControllerExamples/Exp_6Dof/bringup/launch/: r6bot_controller.launch.py  send_trajectory.launch.py
3-ControllerExamples/Exp_6Dof/controller/: r6bot_controller.cpp
3-ControllerExamples/Exp_6Dof/controller/include/ros2_control_demo_example_7/: r6bot_controller.hpp
3-ControllerExamples/Exp_6Dof/description/launch/: view_r6bot.launch.py
3-ControllerExamples/Exp_6Dof/description/ros2_control/: r6bot.ros2_control.xacro
3-ControllerExamples/Exp_6Dof/description/urdf/: r6bot.urdf.xacro
3-ControllerExamples/Exp_6Dof/hardware/: r6bot_hardware.cpp
3-ControllerExamples/Exp_6Dof/hardware/include/ros2_control_demo_example/: r6bot_hardware.hpp
3-ControllerExamples/Exp_6Dof/reference_generator/: send_trajectory.cpp
3-ControllerExamples/Exp_6Dof/test/: test_r6bot_controller_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
3-ControllerExamples/prompt/: output.txt  prompt.txt
4-ROS2ArmMoveit/: README.md
4-ROS2ArmMoveit/src/my_robot_bringup/: package.xml
4-ROS2ArmMoveit/src/my_robot_bringup/launch/: my_robot.launch.xml
4-ROS2ArmMoveit/src/my_robot_commander_cpp/: CMakeLists.txt  package.xml
4-ROS2ArmMoveit/src/my_robot_commander_cpp/src/: commander_template.cpp  test_moveit.cpp
4-ROS2ArmMoveit/src/my_robot_description/: package.xml
4-ROS2ArmMoveit/src/my_robot_description/launch/: display.launch.xml
4-ROS2ArmMoveit/src/my_robot_description/urdf/: arm.xacro  common_properties.xacro  gripper.xacro  my_robot.ros2_control.xacro  my_robot.urdf.xacro
4-ROS2ArmMoveit/src/my_robot_interfaces/: CMakeLists.txt  package.xml
4-ROS2ArmMoveit/src/my_robot_moveit_config/: .setup_assistant
4-ROS2ArmMoveit/src/my_robot_moveit_config/config/: joint_limits.yaml  my_robot.srdf
